refactoring + pagination